# llm-search-quality-evaluation

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: test.yml
rre-dataset-generator/: .gitignore  Makefile  README.md  config.yaml  dataset_generation.py  dataset_generator.py  llm_config.yaml  manual_test.py  pyproject.toml  ruff.toml
rre-dataset-generator/dataset_generator/: logger.py
rre-dataset-generator/src/: config.py  data_store.py  logger.py  utils.py  writters.py
rre-dataset-generator/src/llm/: __init__.py  factory.py  llm_config.py  llm_provider_factory.py  llm_service.py
rre-dataset-generator/src/model/: __init__.py  document.py  query.py  query_rating_context.py  rating.py  score_response.py  writer_config.py
rre-dataset-generator/src/search_engine/: __init__.py  data_store.py  elasticsearch_search_engine.py  opensearch_engine.py  search_engine_base.py  search_engine_factory.py  solr_search_engine.py
rre-dataset-generator/src/test_env/: .gitignore  docker-compose.yml
rre-dataset-generator/src/writers/: __init__.py  abstract_writer.py  mteb_writer.py  quepid_writer.py  rre_writer.py  writer_factory.py
rre-dataset-generator/tests/integration/: docker-compose-solr.yml  docker-compose.solr.yml  test_integration.py  test_solr_search_engine.py
rre-dataset-generator/tests/integration/elasticsearch-init/: Dockerfile  elasticsearch-init.sh
rre-dataset-generator/tests/integration/resources/: good_config.yaml
rre-dataset-generator/tests/integration/solr-init/: Dockerfile  solr-init.sh
rre-dataset-generator/tests/mocks/: elasticsearch.py  opensearch.py  solr.py
rre-dataset-generator/tests/unit/: test_config.py  test_data_store.py  test_dataset_generation_dummy.py  test_elasticsearch_search_engine.py  test_llm_service.py  test_opensearch_engine.py  test_query_rating_context.py  test_schemas.py  test_solr_search_engine.py  test_utils.py  test_writers.py  test_writters.py
rre-dataset-generator/tests/unit/llm/: test_llm_service_queries.py  test_llm_service_score.py
rre-dataset-generator/tests/unit/resources/: elasticsearch_good_config.yaml  good_config.yaml  good_config_opensearch.yaml  invalid_type.yaml  missing_optional.yaml  missing_required.yaml  mteb_config.yaml  only_q.json  rre_config.yaml  solr_good_config.yaml
rre-dataset-generator/tests/unit/writers/: test_abstract_writer.py  test_mteb_writer.py  test_quepid_writer.py  test_rre_writer.py
rre-embeddings/: .gitignore  README.md  config.yaml  main.py  mypy.ini  pyproject.toml
rre-embeddings/resources/data/: candidates.jsonl  corpus.jsonl  queries.jsonl
rre-embeddings/src/: __init__.py  config.py  main.py
rre-embeddings/src/custom_tasks/: reranking_task.py  retrieval_task.py
rre-embeddings/src/mteb_evaluator/: __init__.py
rre-embeddings/src/utilities/: helper.py
rre-embeddings/src/writers/: embedding_writer.py
rre-embeddings/tests/unit/: test_config.py  test_custom_tasks.py  test_embedding_writer.py
rre-embeddings/tests/unit/resources/: valid_config.yaml
rre-tools/: .gitignore  README.md  mypy.ini  pyproject.toml
rre-tools/configs/: approx_search_config.yaml
rre-tools/configs/approximate_search_evaluator/: approximate_search_evaluator_config.yaml  default.yaml
rre-tools/configs/dataset_generator/: dataset_generator_config.yaml  default.yaml  llm.yaml  llm_config.yaml
rre-tools/configs/embedding_model_evaluator/: default.yaml  embedding_model_evaluator_config.yaml
rre-tools/docs/approximate_search_evaluator/: README.md
rre-tools/docs/code_quality_tools/: README.md
rre-tools/docs/dataset_generator/: README.md
rre-tools/docs/embedding_model_evaluator/: README.md
rre-tools/docs/tests/: README.md
rre-tools/src/rre_tools/: __init__.py
rre-tools/src/rre_tools/approximate_search_evaluator/: __init__.py  config.py  constants.py  main.py
rre-tools/src/rre_tools/core/: data_store.py  logger.py  utils.py
rre-tools/src/rre_tools/dataset_generator/: config.py  main.py
rre-tools/src/rre_tools/embedding_model_evaluator/: config.py  embedding_writer.py  main.py  utils.py
rre-tools/src/rre_tools/shared/: data_store.py  utils.py
rre-tools/templates/: only_vector.json  queries.txt  template_solr.json  template_vespa.yql
rre-tools/tests/: conftest.py  test_cross_plataform.py
rre-tools/tests/approximate_search_evaluator/: conftest.py  test_config_approximate_search_evaluator.py
rre-tools/tests/core/: test_clean_text.py  test_data_store.py  test_models.py
rre-tools/tests/core/search_engines/: test_elasticsearch_search_engine.py  test_opensearch_engine.py  test_solr_search_engine.py  test_vespa_search_engine.py
rre-tools/tests/core/writers/: test_mteb_writer.py  test_quepid_writer.py  test_rre_writer.py
rre-tools/tests/dataset_generator/: test_config.py  test_config_dataset_generator.py  test_main_autosave.py
rre-tools/tests/dataset_generator/llm/: llm_mock.py  test_llm_service.py  test_llm_service_queries.py  test_llm_service_score.py
rre-tools/tests/embedding_model_evaluator/: conftest.py  test_custom_tasks.py  test_embedding_writer.py  test_mteb_config.py
rre-tools/tests/mocks/: elasticsearch.py  opensearch.py  solr.py
rre-tools/tests/resources/: good_config_elasticsearch.yaml  good_config_opensearch.yaml  good_config_solr.yaml  good_config_vespa.yaml  invalid_mteb_config.yaml  invalid_type.yaml  llm_config.yaml  missing_both_templates.yaml  missing_optional.yaml  missing_required.yaml  mteb_config.yaml  valid_mteb_config.yaml
rre-tools/tests/resources/approximate_search_evaluator/: good_config_elasticsearch.yaml  good_config_solr.yaml  missing_collection_name.yaml  missing_optional_elasticsearch.yaml  missing_optional_solr.yaml  missing_query_template.yaml  missing_search_engine_type.yaml  missing_search_engine_url.yaml  template_solr.json
rre-tools/tests/shared/: conftest.py  test_clean_text.py  test_data_store.py  test_models.py
rre-tools/tests/shared/search_engines/: test_base_search_engine.py  test_elasticsearch_search_engine.py  test_opensearch_engine.py  test_solr_search_engine.py  test_vespa_search_engine.py
(+243 files in other folders)
