[project]
name = "Dataset-Generator"
version = "0.1.0"
description = "Dataset Generator project"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "argparse>=1.4.0",
    "pydantic>=2.0",
    "pytest>=8.4.1",
    "pyyaml>=6.0.2",
    "requests>=2.32.4",
    "langchain-core>=0.3.68",
    "langchain-openai>=0.3.27",
    "langchain-google-genai>=2.1.7",
    "python-dotenv>=1.1.1",
]
