[project]
name = "Dataset-Generator"
version = "0.1.0"
description = "Dataset Generator project"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
    "pytest>=8.4.1",
    "pyyaml>=6.0.2",
    "requests>=2.32.4",
    "langchain-core>=0.3.68",
    "langchain-openai>=0.3.27",
    "langchain-google-genai>=2.1.7",
    "python-dotenv>=1.1.1",
]

[dependency-groups]
dev = [
    "mypy>=1.17.1",
    "mypy-extensions>=1.1.0",
    "pre-commit>=4.3.0",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "ruff>=0.12.10",
    "typing-extensions>=4.14.1",
    "types-PyYAML>=6.0.2",
    "types-requests>=2.32.4",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v --tb=short"
