[project]
name = "rre-embeddings"
version = "0.1.0"
description = "Embeddings Exact Search Benchmarking project"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "argparse>=1.4.0",
    "pydantic>=2.0",
    "pytest>=8.4.1",
    "pyyaml>=6.0.2",
    "langchain-core>=0.3.68",
    "langchain-openai>=0.3.27",
    "langchain-google-genai>=2.1.7",
    "python-dotenv>=1.1.1",
    "mteb>=0.1.0"
]


[project.scripts]
rre-embeddings = "main:main"

[project.optional-dependencies]
dev = [
    "mypy",
    "ruff"
]

[tool.setuptools]
py-modules = ["main"]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"
