[project]
name = "rre-tools"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = []
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]
requires-python = ">=3.10"

# Shared dependencies + import of workspace modules
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0.2",
    "python-dotenv>=1.1.1",
    "dataset-generator",
    "commons",
    "embedding-model-evaluator"
]

# mypy/ruff/pytest
[dependency-groups]
dev = [
    "mypy>=1.17.1",
    "mypy-extensions>=1.1.0",
    "pre-commit>=4.3.0",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "ruff>=0.12.10",
    "typing-extensions>=4.14.1",
    "types-PyYAML>=6.0.2",
    "types-requests>=2.32.4"
]

[tool.pytest.ini_options]
addopts = "-v --tb=short"

[project.scripts]
rre-tools = "rre_tools:main"

[tool.uv.workspace]
members = [
    "commons",
    "dataset-generator",
    "embedding-model-evaluator",
]

[tool.uv.sources]
dataset-generator         = { workspace = true }
commons                   = { workspace = true }
embedding-model-evaluator = { workspace = true }

[build-system]
requires = ["uv_build>=0.8.13,<0.9.0"]
build-backend = "uv_build"
